<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:background="@color/primary">

    <ImageView
        android:id="@+id/medicineIcon"
        android:layout_width="180dp"
        android:layout_height="180dp"
        android:src="@drawable/logoapp"
        android:layout_marginTop="20dp"/>

    <TextView
        android:id="@+id/textAppName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/soTheoDoiSucKhoe"
        android:layout_marginTop="12dp"
        android:textColor="@color/primary_text"
        android:textSize="26sp"
        android:textStyle="bold"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:layout_marginTop="18dp"
        android:background="@drawable/background_content_bottom">


        <EditText
            android:id="@+id/inputNamesign"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:layout_marginTop="60dp"
            android:background="@drawable/background_input"
            android:hint="@string/username"
            android:imeOptions="actionNext"
            android:importantForAutofill="no"
            android:inputType="text"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:textColor="@color/primary_text"
            android:textSize="14sp"
            android:textStyle="bold"/>

        <EditText
            android:id="@+id/inputPasswordsign"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:layout_marginTop="24dp"
            android:background="@drawable/background_input"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:textColor="@color/primary_text"
            android:textSize="14sp"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/forgotpass"
            android:layout_width="wrap_content"
            android:layout_height="20dp"
            android:layout_marginLeft="100dp"
            android:layout_marginTop="10dp"
            android:text="@string/forgotpassword"
            android:textColor="@color/primary_text"
            android:textSize="12sp"
            android:textStyle="bold" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/buttonSignIn"
            android:layout_width="300dp"
            android:layout_height="68dp"
            android:text="@string/login"
            android:textColor="@color/primary_text"
            android:textSize="20sp"
            android:textStyle="bold"
            app:cornerRadius="10dp"
            android:layout_marginTop="22dp"
            android:backgroundTint="#77B796"
            android:textAllCaps="false"/>

        <TextView
            android:id="@+id/textRegesterAccount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/regester_account"
            android:textColor="@color/primary_text"
            android:textSize="13sp"
            android:textStyle="bold"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="30dp">

            <com.google.android.gms.common.SignInButton
                android:id="@+id/signggbtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                />
        </LinearLayout>


    </LinearLayout>

</LinearLayout>