<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:background="@color/primary">


    <ImageView
        android:id="@+id/medicineIcon"
        android:layout_width="160dp"
        android:layout_height="160dp"
        android:src="@drawable/logoapp"
        android:layout_marginTop="20dp"/>

    <TextView
        android:id="@+id/theodoi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/soTheoDoiSucKhoe"
        android:layout_marginTop="12dp"
        android:textColor="@color/primary_text"
        android:textSize="26sp"
        android:textStyle="bold"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="12dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/background_content_bottom"
            android:gravity="center_horizontal"
            android:orientation="vertical">

<!--            <EditText-->
<!--                android:id="@+id/userName"-->
<!--                android:layout_width="300dp"-->
<!--                android:layout_height="50dp"-->
<!--                android:layout_marginTop="22dp"-->
<!--                android:background="@drawable/background_input"-->
<!--                android:hint="Tên người dùng"-->
<!--                android:imeOptions="actionNext"-->
<!--                android:importantForAutofill="no"-->
<!--                android:inputType="text"-->
<!--                android:paddingStart="16dp"-->
<!--                android:paddingEnd="16dp"-->
<!--                android:textColor="@color/primary_text"-->
<!--                android:textSize="14sp"-->
<!--                android:textStyle="bold" />-->

            <EditText
                android:id="@+id/inputEmail"
                android:layout_width="300dp"
                android:layout_height="50dp"
                android:layout_marginTop="22dp"
                android:background="@drawable/background_input"
                android:hint="@string/username"
                android:imeOptions="actionNext"
                android:importantForAutofill="no"
                android:inputType="text"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                android:textColor="@color/primary_text"
                android:textSize="14sp"
                android:textStyle="bold" />


            <EditText
                android:id="@+id/inputPassword"
                android:layout_width="300dp"
                android:layout_height="50dp"
                android:layout_marginTop="22dp"
                android:background="@drawable/background_input"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:paddingStart="16dp"

                android:paddingEnd="16dp"
                android:textColor="@color/primary_text"
                android:textSize="14sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/inputConfirmPassword"
                android:layout_width="300dp"
                android:layout_height="50dp"
                android:layout_marginTop="22dp"
                android:background="@drawable/background_input"
                android:hint="@string/Confirmpassword"
                android:inputType="textPassword"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                android:textColor="@color/primary_text"
                android:textSize="14sp"
                android:textStyle="bold" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/buttonRegister"
                android:layout_width="300dp"
                android:layout_height="60dp"
                android:layout_marginTop="22dp"
                android:text="@string/register"
                android:textAllCaps="false"
                android:textColor="@color/primary_text"
                android:textSize="20sp"
                android:textStyle="bold"
                app:cornerRadius="10dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Hoặc đăng nhập bằng"
                android:layout_marginTop="6dp"
                android:textColor="@color/secondary_text"
                android:textSize="14sp"
                android:textStyle="bold"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <!--            <ImageView-->
                <!--                android:id="@+id/fbIcon"-->
                <!--                android:layout_width="40dp"-->
                <!--                android:layout_height="40dp"-->
                <!--                android:layout_marginTop="20dp"-->
                <!--                android:layout_marginRight="40dp"-->
                <!--                android:src="@drawable/facebook" />-->

                <com.google.android.gms.common.SignInButton
                    android:id="@+id/signggbtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    />


            </LinearLayout>


        </LinearLayout>

    </LinearLayout>

</LinearLayout>